<resources>
    <string name="app_name">APTwitterClone</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">zV7Gr9uFNybogOD9xsjX7Q6HHReuZvjQRz46srcG</string>
    <string name="back4app_client_key">YC0t9UKGmXYK7PnZQrAfk1yMCQplXivPwnndz5vb</string>
    <string name="hint_email">Please Enter Email</string>
    <string name="hint_name">Please Enter Name</string>
    <string name="hint_password">Please Enter Password</string>
    <string name="log_in">Login</string>
    <string name="signup">SignUp</string>
    <string name="logout">logout</string>
    <string name="temp_username">test1</string>
    <string name="tweet_hint">What\'s your today thought?</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="view_user_tweet">View Other\'s User Tweet</string>
    <string name="your_tweet">Your Tweet</string>
    <string name="user_name">User Name</string>
</resources>
